# doge

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/function-index/: SKILL.md
.agents/skills/maintaining-agents/: SKILL.md
.agents/skills/writing-doge/: SKILL.md
.agents/skills/writing-doge/references/: stdlib.md
.claude/: CLAUDE.md  settings.json
.claude/release-notes/: README.md  v0.3.1.md
.claude/skills/function-index/: SKILL.md
.claude/skills/maintaining-claude/: SKILL.md
.claude/skills/writing-doge/: SKILL.md
.claude/skills/writing-doge/references/: stdlib.md
.codex/: PLAN.template.md  README.md  config.toml  user-config.template.toml
.github/: dependabot.yml  release-notes-template.md
.github/workflows/: ci.yml  release.yml
brand/: .thumbnail  Doge Logo.dc.html  Icon Exporter.html  README.md
crates/doge-cli/: Cargo.toml  build.rs
crates/doge-cli/src/: build.rs  cache.rs  main.rs  repl.rs
crates/doge-cli/tests/: cli.rs  interp_examples.rs  run_examples.rs
crates/doge-cli/tests/fixtures/: class_value.doge
crates/doge-cli/tests/fixtures/modules/: cycle_entry.doge  obj_entry.doge  rterr_lib.doge
crates/doge-cli/tests/fixtures/test_suite/: test_a.doge
crates/doge-compiler/: AGENTS.md  Cargo.toml
crates/doge-compiler/src/: ast.rs  builtins.rs  check.rs  codegen.rs  complete.rs  diagnostics.rs  keywords.rs  lexer.rs  lib.rs  manifest.rs  modules.rs  parser.rs  project.rs  stdlib.rs  token.rs
crates/doge-compiler/src/ast/: analysis.rs  dump.rs  mod.rs  tests.rs
crates/doge-compiler/src/check/: mod.rs  scopes.rs  stmt.rs  tests.rs
crates/doge-compiler/src/codegen/: analysis.rs  callable.rs  calls.rs  dispatch.rs  expr.rs  mod.rs  names.rs  program.rs  stmt.rs  tests.rs
crates/doge-compiler/src/fmt/: mod.rs  tests.rs
crates/doge-compiler/src/lexer/: mod.rs  scan.rs  strings.rs  tests.rs
crates/doge-compiler/src/modules/: diag.rs  mod.rs  tests.rs
crates/doge-compiler/src/parser/: expr.rs  mod.rs  stmt.rs  tests.rs
crates/doge-compiler/tests/: check_examples.rs  fmt_examples.rs
crates/doge-compiler/tests/fixtures/: augmented_multi_target.doge  augmented_multi_target.expected  bork_outside_loop.doge  bork_outside_loop.expected  chained_comparison.doge  chained_comparison.expected  collector_not_last.doge  collector_not_last.expected  const_reassign.doge  const_reassign.expected  interp_empty_hole.doge  interp_empty_hole.expected  interp_unclosed_hole.doge  interp_unclosed_hole.expected  interp_undeclared.doge  missing_wow.doge  missing_wow.expected  python_def.doge  python_def.expected  single_target_comma_value.doge  single_target_comma_value.expected  slice_is_not_a_target.doge  slice_is_not_a_target.expected  tab_indent.doge  tab_indent.expected  ternary_needs_else.doge  ternary_needs_else.expected  undeclared_name.doge  undeclared_name.expected
crates/doge-interp/: AGENTS.md  Cargo.toml
crates/doge-interp/src/: analyze.rs  call.rs  exec.rs  expr.rs  lib.rs  natives.rs  pack.rs  tests.rs
crates/doge-lsp/: AGENTS.md  Cargo.toml
crates/doge-lsp/src/: convert.rs  lib.rs  tests.rs
crates/doge-runtime/: AGENTS.md  Cargo.toml
crates/doge-runtime/src/: builtins.rs  codec.rs  display.rs  error.rs  functions.rs  lib.rs  methods.rs  objects.rs  ops.rs  ordered_map.rs  pack.rs  value.rs
crates/doge-runtime/src/methods/: bytes.rs  dict.rs  list.rs  mod.rs  str.rs  tests.rs
crates/doge-runtime/src/ops/: arith.rs  bits.rs  compare.rs  index.rs  mod.rs  tests.rs
crates/doge-runtime/src/stdlib/: chase.rs  crypto.rs  dson.rs  env.rs  fetch.rs  howl.rs  hunt.rs  json.rs  lists.rs  mod.rs  nap.rs  nerd.rs  pack.rs  roll.rs  serialize.rs  strings.rs
crates/dogelang/: AGENTS.md  Cargo.toml
crates/dogelang/src/: build.rs  cache.rs  deps.rs  main.rs  new.rs  test.rs
crates/dogelang/tests/: cli.rs  interp_examples.rs  run_examples.rs
crates/dogelang/tests/fixtures/: amaze_fail.doge  args_echo.doge  bonk.doge  caught_error_fields.doge  concurrent.doge  deep_recursion.doge  divide_by_zero.doge  func_value.doge  gib_echo.doge  standalone.doge  tests_const.doge  tests_fail.doge  tests_pass.doge
crates/dogelang/tests/fixtures/modules/: cycle_a.doge  cycle_b.doge  loose_entry.doge  loose_mod.doge  missing_entry.doge  obj_entry.doge  obj_mod.doge  rterr_entry.doge
crates/dogelang/tests/fixtures/test_suite/: helper.doge  test_b.doge
crates/dogelang/tests/fixtures/test_suite/nested/: test_c.doge
docs/: ARCHITECTURE.md  CLI.md  ERRORS.md  GRAMMAR.md  PACKAGING.md  README.md  STDLIB.md  SYNTAX.md
editors/vscode/: .vscodeignore  README.md  doge-0.2.0.vsix  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: client.js  extension.js  tokenizer.js
editors/vscode/src/test/: grammar.test.js  tokenizer.test.js
editors/vscode/syntaxes/: doge.tmLanguage.json
examples/: amaze.doge  amaze.out  bignum.doge  bignum.out  bound_methods.doge  bound_methods.out  bytes.doge  bytes.out  closures.doge  closures.out  collections.doge  collections.out  control_flow.doge  control_flow.out  decimal.doge  decimal.out  doge_helpers.doge  doge_utils.doge  errors.doge  errors.out  fetch_tree.doge  fetch_tree.out  first_class.doge  first_class.out  functions.doge  functions.out  hello.doge  hello.out  inheritance.doge  inheritance.out  interpolation.doge  interpolation.out  io.doge  io.out  membership.doge  membership.out  methods.doge  methods.out  modules.doge  modules.out  (+40 more)
examples/lib/: helpers.doge  shibe_math.doge
examples/pkg_demo/: doge.toml  expected.out  main.doge
examples/pkg_demo/lib/shibe/: doge.toml  main.doge
