[workspace]
resolver = "2"
members = ["crates/*"]

# Shared metadata so every crate moves in lockstep on one version — the build
# cache is salted with this version, so a bump reliably invalidates stale builds.
[workspace.package]
version = "0.3.3"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/DogeLanguage/doge"
homepage = "https://github.com/DogeLanguage/doge"
readme = "README.md"

# Internal crates as dependencies: the version is required for `cargo publish`
# (crates.io drops the path and keeps the version). It must equal
# `workspace.package.version` above — bump both together.
[workspace.dependencies]
doge-runtime = { path = "crates/doge-runtime", version = "0.3.3" }
doge-compiler = { path = "crates/doge-compiler", version = "0.3.3" }
doge-interp = { path = "crates/doge-interp", version = "0.3.3" }
doge-lsp = { path = "crates/doge-lsp", version = "0.3.3" }
