[package]
name = "doge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "doge"
path = "src/main.rs"

[dependencies]
doge-compiler = { path = "../doge-compiler" }
doge-interp = { path = "../doge-interp" }
doge-runtime = { path = "../doge-runtime" }
