[package]
name = "doge-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# The project's first third-party dependencies (Hard Rule 10): hand-rolling the
# LSP JSON-RPC protocol is far more code and risk than a focused, well-scoped set.
# `lsp-server` is synchronous (no async runtime) so the footprint stays small.
[dependencies]
doge-compiler = { path = "../doge-compiler" }
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
