[package]
name = "doge-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Language server for the Doge programming language (powers `doge lsp`)."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["doge", "language", "lsp", "language-server"]
categories = ["compilers", "development-tools"]

# The project's first third-party dependencies (Hard Rule 10): hand-rolling the
# LSP JSON-RPC protocol is far more code and risk than a focused, well-scoped set.
# `lsp-server` is synchronous (no async runtime) so the footprint stays small.
[dependencies]
doge-compiler.workspace = true
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
