[package]
name = "doge-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Runtime for the Doge programming language — Value model, operators, builtins, and catchable errors."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["doge", "language", "runtime", "scripting"]
categories = ["compilers"]

[dependencies]
# Regex engine for the `hunt` module. A correct regex engine is large and
# security-sensitive (catastrophic backtracking / ReDoS); `regex` is pure-Rust and
# guarantees linear-time matching with no backtracking blowup, exactly matching the
# runtime's never-panics, every-failure-catchable guarantee. Hand-rolling one would
# be far more code and risk.
regex = "1"
# HTTP(S) client for the `howl` module. TLS cannot be hand-rolled, so `howl.get`/
# `howl.post` need a real HTTP stack; ureq is blocking/synchronous, matching the
# runtime's no-async design, and rustls keeps it pure-Rust with bundled roots.
ureq = { version = "2", default-features = false, features = ["tls"] }
